# AlphaStream-KF

./: .gitignore  README.md  main.py  pyproject.toml
alphastream_kf/: __init__.py  kalman_filter.py  stat_arb.py
notebooks/: analysis.ipynb
src/: backtester.py  data_loader.py  half_life.py  kalman_filter.py  plotting.py  storage.py  strategy.py
tests/: test_kalman_filter.py  test_stat_arb.py
